--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^5.3.8",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^17.0.1",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
